Fix connection drops: Remove process.exit, add proper error handling and graceful shutdown
- Replace process.exit(1) with graceful error handling when FAL_KEY is missing
- Add null safety checks in all tool handlers
- Provide user-friendly error messages instead of server crashes
- Add graceful shutdown handlers for SIGINT and SIGTERM
- Update package.json bin field for npx compatibility
- Server now continues running even without API token configured

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "MCP server for generating images using Bytedance's SeedDream 3.0 model via FAL AI",
   "private": true,
   "type": "module",
-  "bin": {
-    "seedream-fal-server": "./build/index.js"
-  },
+  "bin": "./build/index.js",
   "files": [
     "build"
   ],
