--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "seedream-fal-server",
-  "version": "0.1.0",
-  "description": "MCP server for generating images using Bytedance's SeedDream 3.0 model via FAL AI",
+  "name": "seedream-v4-fal-server",
+  "version": "1.0.0",
+  "description": "MCP server for generating images using Bytedance's SeedDream 4.0 model via FAL AI - A new-generation image creation model that integrates image generation and image editing capabilities into a single, unified architecture",
   "private": true,
   "type": "module",
   "bin": "./build/index.js",
@@ -21,21 +21,23 @@
     "model-context-protocol",
     "image-generation",
     "seedream",
+    "seedream-4.0",
     "bytedance",
     "fal-ai",
     "ai",
-    "text-to-image"
+    "text-to-image",
+    "image-editing"
   ],
   "author": "SeedDream MCP Server",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/PierrunoYT/seedream-v3-fal-mcp-server.git"
+    "url": "https://github.com/PierrunoYT/seedream-v4-fal-mcp-server.git"
   },
   "bugs": {
-    "url": "https://github.com/PierrunoYT/seedream-v3-fal-mcp-server/issues"
+    "url": "https://github.com/PierrunoYT/seedream-v4-fal-mcp-server/issues"
   },
-  "homepage": "https://github.com/PierrunoYT/seedream-v3-fal-mcp-server#readme",
+  "homepage": "https://github.com/PierrunoYT/seedream-v4-fal-mcp-server#readme",
   "dependencies": {
     "@fal-ai/client": "^1.5.0",
     "@modelcontextprotocol/sdk": "0.6.0"
