--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,50 @@
-# Dependencies
+# Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Build outputs
 dist/
+build/
 *.tsbuildinfo
+*.js.map
 
 # Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
 
-# IDE files
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage
+coverage/
+*.lcov
+.nyc_output
+
+# Cache directories
+.cache/
+.parcel-cache/
+.npm/
+.eslintcache
+.yarn-integrity
+
+# IDE and editor files
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+*.sublime-*
 
 # OS generated files
 .DS_Store
@@ -30,63 +54,30 @@ dist/
 .Trashes
 ehthumbs.db
 Thumbs.db
+Desktop.ini
 
-# Logs
-logs
-*.log
+# Temporary files
+*.tmp
+*.temp
+.temp/
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
+# Package files
 *.tgz
+*.tar.gz
 
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
+# Framework specific
+.next/
+.nuxt/
+.vuepress/dist/
+.serverless/
 .fusebox/
 
-# DynamoDB Local files
+# Database
+*.db
+*.sqlite
+*.sqlite3
 .dynamodb/
 
-# TernJS port file
+# Misc
 .tern-port
+.node_repl_history
